change breakpoint to 320 and fix social icon spacing for iphone 4-5

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -20,9 +20,9 @@
    ========================================================================== */
 
 .social-icons {
-  margin: 1em 0 2em;
+  margin: 1em 0 1em;
   a {
-    padding: 4px 8px;
+    padding: 4px 6px;
     &:hover {
       color: $black;
     }
